@@ -730,6 +730,7 @@ pm-zinc-froth=Zinc froth
 pm-zinc-sulfide-concentrate=Zinc sulfide concentrate
 pm-zinc-vapour=Zinc vapour
 pm-sulfuric-awaste-water=Sulfuric waste water
+pm-hydrogen-sulfide=Hydrogen sulfide
 
 [recipe-name]
 pm-stone-crushing=Stone crushing
