@@ -1921,6 +1921,15 @@ data:extend({
     base_color = {r = 0.56, g = 0.422, b = 0.22},
     flow_color = {r = 0.56, g = 0.422, b = 0.22}
   },
+  {
+    type = "fluid",
+    name = "pm-hydrogen-sulfide",
+    icon_size = 64,
+    icon = "__periodic-madness__/graphics/icons/fluids/sulfuric-waste-water.png",
+    default_temperature = 15,
+    base_color = {r = 0.56, g = 0.422, b = 0.22},
+    flow_color = {r = 0.56, g = 0.422, b = 0.22}
+  },
 
 	{
 		type = "fluid",
